--- a/src/main/resources/templates/cadastro/telefones.html
+++ b/src/main/resources/templates/cadastro/telefones.html
@@ -37,7 +37,7 @@
 			<br/>
 		
 		
-			<form th:action="@{/salvartelefone/{idpessoa}(idpessoa=${pessoaobj.id})}" method="post" class="col s12">
+			<form th:action="@{/salvartelefone/{idpessoa}(idpessoa=${pessoaobj.id})}" method="post" class="col s12" onsubmit="return validarCampos()? true : false">
 				<div class="input-field col s12">
 					<label for="id" class="active">id:</label>
 					 <input type="text"	name="id" id="id" class="validate" readonly="readonly"/>
@@ -74,5 +74,21 @@
 
 	<!--JavaScript at end of body for optimized loading-->
 	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+	
+	<script type="text/javascript">
+		function validarCampos() {
+			numero  = document.getElementById('numero').value;
+			tipo  = document.getElementById('tipo').value;
+			
+			if (numero == ''){
+				alert ('Informe o numero');
+				return false;
+			} else if (tipo == ''){
+				alert('Informe o tipo');
+				return false;
+			}
+			return true;
+		}
+	</script>
 </body>
 </html>
