--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -8,7 +8,7 @@
 <!--Import materialize.css-->
 <link type="text/css" rel="stylesheet"
 	href="/materialize/css/materialize.min.css" media="screen,projection" />
-<link type="text/css" rel="stylesheet" href="/style.css">	
+<link type="text/css" rel="stylesheet" href="/materialize/css/style.css">	
 <meta charset="ISO-8859-1">
 <title>Cadastro de Pessoa</title>
 </head>
