--- a/src/main/resources/templates/cadastro/telefones.html
+++ b/src/main/resources/templates/cadastro/telefones.html
@@ -8,6 +8,7 @@
 <!--Import materialize.css-->
 <link type="text/css" rel="stylesheet"
 	href="/materialize/css/materialize.min.css" media="screen,projection" />
+<link type="text/css" rel="stylesheet" href="/materialize/css/style.css">	
 <meta charset="ISO-8859-1">
 <title>Cadastro de Telefones</title>
 </head>
