--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -7,8 +7,8 @@
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
 	rel="stylesheet">
 <!--Import materialize.css-->
-<link type="text/css" rel="stylesheet"
-	href="/materialize/css/materialize.min.css" media="screen,projection" />
+<!-- Compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <link type="text/css" rel="stylesheet" href="/materialize/css/style.css">	
 <meta charset="ISO-8859-1">
 <title>Cadastro de Pessoa</title>
@@ -47,7 +47,7 @@
 						id="sobrenome" class="validate" />
 				</div>
 
-				<div class="input-field col s6" sec:authorize="hasRole('ROLE_ADMIN')">
+				<div class="input-field col s6" sec:authorize="hasRole('ROLE_CAIXA')">
 					<label for="idade" class="active">Idade:</label> <input
 						type="number" name="idade" th:field="*{idade}" id="idade"
 						class="validate" />
@@ -100,7 +100,6 @@
 		</tr>
 	</table>
 
-	<!--JavaScript at end of body for optimized loading-->
-	<script type="text/javascript" src="materialize/js/materialize.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
