--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<!--Import Google Icon Font-->
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!--Import materialize.css-->
+<!-- Compiled and minified CSS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+<link type="text/css" rel="stylesheet" href="/materialize/css/style.css">	
 	<meta charset="ISO-8859-1">
 	<title>Proj Spring</title>
 </head>
 <body>
 	<h1>Olá spring seu viado</h1>
 	<a href="/cadastropessoa">Cadastro pessoa</a>
+<!--JavaScript at end of body for optimized loading-->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
 </html>
