--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -10,7 +10,7 @@
 <!-- Compiled and minified CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <link type="text/css" rel="stylesheet" href="/materialize/css/style.css">	
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Cadastro de Pessoa</title>
 </head>
 <body>
@@ -52,7 +52,37 @@
 						type="number" name="idade" th:field="*{idade}" id="idade"
 						class="validate" />
 				</div>
-
+				
+				<div class="input-field col s6">
+					<label for="cep" class="active">Cep:</label>
+					 <input type="text" name="cep" th:field="*{cep}" id="cep" class="validate" size="10" maxlength="9"/>
+				</div>
+				
+				<div class="input-field col s6">
+					<label for="rua" class="active">Rua:</label>
+					 <input type="text" name="rua" th:field="*{rua}" id="rua" class="validate" size="60"/>
+				</div>
+				
+				<div class="input-field col s6">
+					<label for="bairro" class="active">Bairro:</label>
+					 <input type="text" name="bairro" th:field="*{bairro}" id="bairro" class="validate" size="40"/>
+				</div>
+				
+				<div class="input-field col s6">
+					<label for="cidade" class="active">Cidade:</label>
+					 <input type="text" name="cidade" th:field="*{cidade}" id="cidade" class="validate" size="40"/>
+				</div>
+				
+				<div class="input-field col s6">
+					<label for="uf" class="active">Estado:</label>
+					 <input type="text" name="uf" th:field="*{uf}" id="uf" class="validate" size="2"/>
+				</div>
+				
+				<div class="input-field col s6">
+					<label for="ibge" class="active">IBGE:</label>
+					 <input type="text" name="ibge" th:field="*{ibge}" id="ibge" class="validate" size="8"/>
+				</div>
+				
 			</div>
 			<input class="waves-effect waves-light btn" type="submit"
 				value="Salvar" /> <input class="waves-effect waves-light btn"
@@ -99,7 +129,77 @@
 				th:href="@{/excluirpessoa/{idpessoa}(idpessoa=${pessoa.id})}">Excluir</a></td>
 		</tr>
 	</table>
-
+<!-- Adicionando JQuery -->
+<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
+
+<script>
+
+        $(document).ready(function() {
+
+            function limpa_formulario_cep() {
+                // Limpa valores do formulário de cep.
+                $("#rua").val("");
+                $("#bairro").val("");
+                $("#cidade").val("");
+                $("#uf").val("");
+                $("#ibge").val("");
+            }
+            
+            //Quando o campo cep perde o foco.
+            $("#cep").blur(function() {
+
+                //Nova variável "cep" somente com dígitos.
+                var cep = $(this).val().replace(/\D/g, '');
+
+                //Verifica se campo cep possui valor informado.
+                if (cep != "") {
+
+                    //Expressão regular para validar o CEP.
+                    var validacep = /^[0-9]{8}$/;
+
+                    //Valida o formato do CEP.
+                    if(validacep.test(cep)) {
+
+                        //Preenche os campos com "..." enquanto consulta webservice.
+                        $("#rua").val("...");
+                        $("#bairro").val("...");
+                        $("#cidade").val("...");
+                        $("#uf").val("...");
+                        $("#ibge").val("...");
+
+                        //Consulta o webservice viacep.com.br/
+                        $.getJSON("https://viacep.com.br/ws/"+ cep +"/json/?callback=?", function(dados) {
+
+                            if (!("erro" in dados)) {
+                                //Atualiza os campos com os valores da consulta.
+                                $("#rua").val(dados.logradouro);
+                                $("#bairro").val(dados.bairro);
+                                $("#cidade").val(dados.localidade);
+                                $("#uf").val(dados.uf);
+                                $("#ibge").val(dados.ibge);
+                            } //end if.
+                            else {
+                                //CEP pesquisado não foi encontrado.
+                                limpa_formulario_cep();
+                                alert("CEP não encontrado.");
+                            }
+                        });
+                    } //end if.
+                    else {
+                        //cep é inválido.
+                        limpa_formulario_cep();
+                        alert("Formato de CEP inválido.");
+                    }
+                } //end if.
+                else {
+                    //cep sem valor, limpa formulário.
+                    limpa_formulario_cep();
+                }
+            });
+        });
+
+    </script>
+
 </html>
