--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -38,7 +38,7 @@
 				</div>
 
 				<div class="input-field col s6">
-					<label for="nome" class="active">Nome:</label> <input type="text"
+					<label for="nome" class="active">Nome:</label> <input type="text" placeholder="Informe o nome"
 						name="nome" th:field="*{nome}" id="nome" class="validate" />
 				</div>
 				<div class="input-field col s6">
@@ -83,6 +83,14 @@
 					 <input type="text" name="ibge" th:field="*{ibge}" id="ibge" class="validate" size="8"/>
 				</div>
 				
+				<div class="input-field col s6">
+					<label for="sexo" class="active">Sexo:</label>
+					 <select class="browser-default" th:field="*{sexo}">
+					 	<option value="MASCULINO" th:text="Masculino">
+					 	<option value="FEMININO" th:text="Feminino">
+					 </select>
+				</div>
+				
 			</div>
 			<input class="waves-effect waves-light btn" type="submit"
 				value="Salvar" /> <input class="waves-effect waves-light btn"
@@ -96,15 +104,29 @@
 
 
 	<br />
+	<fieldset>
+	<legend>Campo de pesquisa</legend>
 	<div class="row">
 		<form action="pesquisarpessoa" method="post">
-			<label for="nomepesquisa" class="active">Pesquisar por Nome:</label>
-			<input type="text" name="nomepesquisa" id="nomepesquisa"> <input
-				class="waves-effect waves-light btn" type="submit" value="Pesquisar" />
-		<a class="waves-effect waves-light btn" href="/listapessoas">Lista
-			de Pessoas</a>
+			<div class="input-field col s6">
+				<label for="nomepesquisa" class="active">Pesquisar por Nome:</label>
+				<input type="text" name="nomepesquisa" id="nomepesquisa">
+			</div>
+			<div class="input-field col s6">
+				<label for="sexopesquisa" class="active">Pesquisar por sexo</label>
+				 <select class="browser-default" name="sexopesquisa" id="sexopesquisa">
+				 		<option value="">--[Todos]--</option>
+					 	<option value="MASCULINO" th:text="Masculino">
+					 	<option value="FEMININO" th:text="Feminino">
+				 </select>
+			</div>
+				<div class="input-field col s12">
+				<input class="waves-effect waves-light btn" type="submit" value="Pesquisar" />
+				<a class="waves-effect waves-light btn" href="/listapessoas">Lista de Pessoas</a>
+				</div>
 		</form>
 	</div>
+	</fieldset>
 	<br />
 
 	<table class="striped">
