--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -107,7 +107,7 @@
 	<fieldset>
 	<legend>Campo de pesquisa</legend>
 	<div class="row">
-		<form action="pesquisarpessoa" method="post">
+		<form action="pesquisarpessoa" method="post" id="pesquisarpessoa">
 			<div class="input-field col s6">
 				<label for="nomepesquisa" class="active">Pesquisar por Nome:</label>
 				<input type="text" name="nomepesquisa" id="nomepesquisa">
@@ -121,9 +121,10 @@
 				 </select>
 			</div>
 				<div class="input-field col s12">
-				<input class="waves-effect waves-light btn" type="submit" value="Pesquisar" />
-				<a class="waves-effect waves-light btn" href="/listapessoas">Lista de Pessoas</a>
-				</div>
+					<input class="waves-effect waves-light btn" type="submit" value="Pesquisar" onclick="document.getElementById('pesquisarpessoa').method = 'POST'"/>
+					<a class="waves-effect waves-light btn" href="/listapessoas" onclick="document.getElementById('pesquisarpessoa').method = 'get'">Lista de Pessoas</a>
+					<input class="waves-effect waves-light btn" type="submit" onclick="document.getElementById('pesquisarpessoa').method = 'get'" value="Gerar PDF">
+				</div>	
 		</form>
 	</div>
 	</fieldset>
