Combo box profissao , carregando do banco de dados

--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -91,6 +91,13 @@
 					 </select>
 				</div>
 				
+				<div class="input-field col s6">
+					<label for="profissao" class="active">Profissão:</label>
+					 <select class="browser-default" th:field="*{profissao}">
+					 	<option th:each = "p : ${profissoes}" th:value="${p.id}" th:text="${p.nome}">
+					 </select>
+				</div>
+				
 			</div>
 			<input class="waves-effect waves-light btn" type="submit"
 				value="Salvar" /> <input class="waves-effect waves-light btn"
