--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -96,9 +96,15 @@
 					 <select class="browser-default" th:field="*{profissao}">
 					 	<option th:each = "p : ${profissoes}" th:value="${p.id}" th:text="${p.nome}">
 					 </select>
+				</div>	
+				 
+				<div class="input-field col s12">
+					<label for="cargo" class="active">Cargo:</label>
+					 <select class="browser-default" th:field="*{cargo}">
+					 	<option th:each = "c : ${T(com.example.curso.model.Cargo).values()}" th:value="${c}" th:text="${c}">
+					 </select>
 				</div>
 				
-			</div>
 			<input class="waves-effect waves-light btn" type="submit"
 				value="Salvar" /> <input class="waves-effect waves-light btn"
 				type="button" value="Novo"
