Mudando o ENUM para ter a descricao

--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -101,7 +101,7 @@
 				<div class="input-field col s12">
 					<label for="cargo" class="active">Cargo:</label>
 					 <select class="browser-default" th:field="*{cargo}">
-					 	<option th:each = "c : ${T(com.example.curso.model.Cargo).values()}" th:value="${c}" th:text="${c}">
+					 	<option th:each = "c : ${T(com.example.curso.model.Cargo).values()}" th:value="${c}" th:text="${c.nome}">
 					 </select>
 				</div>
 				
