--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -98,13 +98,19 @@
 					 </select>
 				</div>	
 				 
-				<div class="input-field col s12">
+				<div class="input-field col s6">
 					<label for="cargo" class="active">Cargo:</label>
 					 <select class="browser-default" th:field="*{cargo}">
 					 	<option th:each = "c : ${T(com.example.curso.model.Cargo).values()}" th:value="${c}" th:text="${c.nome}">
 					 </select>
 				</div>
 				
+				<div class="input-field col s6">
+					<label class="active" for="dataNascimento">Data Nascimento:</label>
+					<input class="validate" id="dataNascimento" th:field="*{dataNascimento}" type="date" name="dataNascimento" placeholder="dd/mm/aaaa">				
+				</div>
+				
+				</div>
 			<input class="waves-effect waves-light btn" type="submit"
 				value="Salvar" /> <input class="waves-effect waves-light btn"
 				type="button" value="Novo"
