--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -166,7 +166,7 @@
 			<th>Excluir</th>
 			</tr>
 		</thead>
-		<tr th:each="pessoa : ${pessoas}">
+		<tr th:each="pessoa : ${pessoas.content}">
 			<td th:text="${pessoa.id}" />
 			<td><a th:href="@{/telefones/{idpessoa}(idpessoa=${pessoa.id})}"><span th:text="${pessoa.nome}"></span></a></td>
 			<td th:text="${pessoa.sobrenome}" />
