--- a/src/main/resources/templates/cadastro/cadastropessoa.html
+++ b/src/main/resources/templates/cadastro/cadastropessoa.html
@@ -47,7 +47,7 @@
 						id="sobrenome" class="validate" />
 				</div>
 
-				<div class="input-field col s6" sec:authorize="hasRole('ROLE_CAIXA')">
+				<div class="input-field col s6" sec:authorize="hasRole('ROLE_ADMIN')">
 					<label for="idade" class="active">Idade:</label> <input
 						type="number" name="idade" th:field="*{idade}" id="idade"
 						class="validate" />
