Mudando o layout da pagina de Login , Redirecionando a raiz para levar para o login

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,12 +7,15 @@
 <!-- Compiled and minified CSS -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 <link type="text/css" rel="stylesheet" href="/materialize/css/style.css">	
-	<meta charset="ISO-8859-1">
+	<meta charset="UTF-8">
 	<title>Proj Spring</title>
 </head>
 <body>
-	<h1>Olá spring seu viado</h1>
-	<a href="/cadastropessoa">Cadastro pessoa</a>
+	
+	<script type="text/javascript">
+		window.location.href="/login";
+	</script>
+	
 <!--JavaScript at end of body for optimized loading-->
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
 </body>
