--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -3,34 +3,80 @@
 xmlns:th="http://www.thymeleaf.org">
 <head>
 <!--Import Google Icon Font-->
-<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+<!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">-->
 <!--Import materialize.css-->
 <!-- Compiled and minified CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <!--    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">-->
 
-<meta charset="ISO-8859-1">
+<meta charset="UTF-8">
 <title>Login</title>
+<style type="text/css">
+body{
+  margin: 0;
+  padding: 0;
+  font-family: sans-serif;
+  background: #34495e;
+}
+.box{
+  width: 300px;
+  padding: 40px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  background: #191919;
+  text-align: center;
+}
+.box h1{
+  color: white;
+  text-transform: uppercase;
+  font-weight: 500;
+}
+.box input[type = "text"],.box input[type = "password"]{
+  border:0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #3498db;
+  padding: 14px 10px;
+  width: 200px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+}
+.box input[type = "text"]:focus,.box input[type = "password"]:focus{
+  width: 280px;
+  border-color: #2ecc71;
+}
+.box input[type = "submit"]{
+  border:0;
+  background: none;
+  display: block;
+  margin: 20px auto;
+  text-align: center;
+  border: 2px solid #2ecc71;
+  padding: 14px 40px;
+  outline: none;
+  color: white;
+  border-radius: 24px;
+  transition: 0.25s;
+  cursor: pointer;
+}
+.box input[type = "submit"]:hover{
+  background: #2ecc71;
+}
+</style>
 </head>
 <body>
 
-<h1>Acesso ao sistema</h1>
 
-<form th:action="@{/login}" method="post" class="col s12">
-	<div class="row">
-		<div class="input-field col s6">
-			<label>Login</label>
-			<input type="text" name="username">
-		</div>
-		<div class="input-field col s6">
-			<label>Senha</label>
-			<input type="password" name="password">
-		</div>
-		<div class="row">
-			<div class="input-field col s6">
-				<input type="submit" name="submit" value="Logar" class="waves-effect waves-light btn">
-			</div>
-		</div>
-	</div>
+<form th:action="@{/login}" method="post" class="box">
+			<h1>Login</h1>
+			<input type="text" name="username" placeholder="Usuario">
+			<input type="password" name="password" placeholder="Senha">
+			<input type="submit" name="submit" value="Logar">
 
 </form>
 
